--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,11 @@
     "api/*.php": {
       "runtime": "vercel-php@0.3.6"
     }
+    "api/**/*.php": {
+      "runtime": "vercel-php@0.3.6"
+    }
+    "api/***/**/*.php": {
+      "runtime": "vercel-php@0.3.6"
+    }
   }
 }
