--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,12 @@
 {
+  "version": 2,
   "functions": {
-    "api/index.php": {
+    "api/**/*.php": {
       "runtime": "vercel-php@0.4.0"
     }
-  }
+  },
+  "routes": [
+  {"src": "index.html", "dest": "/index.html"},
+  {"src": "/(.*)", "dest": "/api/index.php"}
+  ]
 }
