--- a/vercel.json
+++ b/vercel.json
@@ -72,73 +72,73 @@
   {"src": "/url-pic-wangdong.txt", "dest": "/url-pic-wangdong.txt"},
   {"src": "/url-pic-weimei.txt", "dest": "/url-pic-weimei.txt"},
   {"src": "/url-pic-xinggan.txt", "dest": "/url-pic-xinggan.txt"},
-  {"src": "/api/bing.php", "dest": "bing.php"},
-  {"src": "/api/index.php", "dest": "/index.php"},
-  {"src": "/api/mp3-126.php", "dest": "/mp3-126.php"},
-  {"src": "/api/mp3-az1.php", "dest": "/mp3-az1.php"},
-  {"src": "/api/mp3-az2.php", "dest": "/mp3-az2.php"},
-  {"src": "/api/mp3-az3.php", "dest": "/mp3-az3.php"},
-  {"src": "/api/mp3-az4.php", "dest": "/mp3-az4.php"},
-  {"src": "/api/mp3-bg.php", "dest": "/mp3-bg.php"},
-  {"src": "/api/mp3-bg2.php", "dest": "/mp3-bg2.php"},
-  {"src": "/api/mp3-bg3.php", "dest": "/mp3-bg3.php"},
-  {"src": "/api/mp3-dx11.php", "dest": "/mp3-dx11.php"},
-  {"src": "/api/mp3-dx12.php", "dest": "/mp3-dx12.php"},
-  {"src": "/api/mp3-dx13.php", "dest": "/mp3-dx13.php"},
-  {"src": "/api/mp3-dx14.php", "dest": "/mp3-dx14.php"},
-  {"src": "/api/mp3-dx21.php", "dest": "/mp3-dx21.php"},
-  {"src": "/api/mp3-dx31.php", "dest": "/mp3-dx31.php"},
-  {"src": "/api/mp3-dx32.php", "dest": "/mp3-dx32.php"},
-  {"src": "/api/mp3-dx33.php", "dest": "/mp3-dx33.php"},
-  {"src": "/api/mp3-dx34.php", "dest": "/mp3-dx34.php"},
-  {"src": "/api/mp3-dx35.php", "dest": "/mp3-dx35.php"},
-  {"src": "/api/mp3-github1.php", "dest": "/mp3-github1.php"},
-  {"src": "/api/mp3-github2.php", "dest": "/mp3-github2.php"},
-  {"src": "/api/mp3-github3.php", "dest": "/mp3-github3.php"},
-  {"src": "/api/mp3-github4.php", "dest": "/mp3-github4.php"},
-  {"src": "/api/mp3-jp11.php", "dest": "/mp3-jp11.php"},
-  {"src": "/api/mp3-jp12.php", "dest": "/mp3-jp12.php"},
-  {"src": "/api/mp3-jp13.php", "dest": "/mp3-jp13.php"},
-  {"src": "/api/mp3-jp14.php", "dest": "/mp3-jp14.php"},
-  {"src": "/api/mp3-jp21.php", "dest": "/mp3-jp21.php"},
-  {"src": "/api/mp3-jp31.php", "dest": "/mp3-jp31.php"},
-  {"src": "/api/mp3-jp32.php", "dest": "/mp3-jp32.php"},
-  {"src": "/api/mp3-jp33.php", "dest": "/mp3-jp33.php"},
-  {"src": "/api/mp3-jp34.php", "dest": "/mp3-jp34.php"},
-  {"src": "/api/mp3-jp35.php", "dest": "/mp3-jp35.php"},
-  {"src": "/api/mp3-sc11.php", "dest": "/mp3-sc11.php"},
-  {"src": "/api/mp3-sc12.php", "dest": "/mp3-sc12.php"},
-  {"src": "/api/mp3-sc13.php", "dest": "/mp3-sc13.php"},
-  {"src": "/api/mp3-sc14.php", "dest": "/mp3-sc14.php"},
-  {"src": "/api/mp3-sc21.php", "dest": "/mp3-sc21.php"},
-  {"src": "/api/mp3-sc31.php", "dest": "/mp3-sc31.php"},
-  {"src": "/api/mp3-sc32.php", "dest": "/mp3-sc32.php"},
-  {"src": "/api/mp3-sc33.php", "dest": "/mp3-sc33.php"},
-  {"src": "/api/mp3-sc34.php", "dest": "/mp3-sc34.php"},
-  {"src": "/api/mp3-sc35.php", "dest": "/mp3-sc35.php"},
-  {"src": "/api/mp3-yd11.php", "dest": "/mp3-yd11.php"},
-  {"src": "/api/mp3-yd12.php", "dest": "/mp3-yd12.php"},
-  {"src": "/api/mp3-yd13.php", "dest": "/mp3-yd13.php"},
-  {"src": "/api/mp3-yd14.php", "dest": "/mp3-yd14.php"},
-  {"src": "/api/mp3-yd21.php", "dest": "/mp3-yd21.php"},
-  {"src": "/api/mp3-yd31.php", "dest": "/mp3-yd31.php"},
-  {"src": "/api/mp3-yd32.php", "dest": "/mp3-yd32.php"},
-  {"src": "/api/mp3-yd33.php", "dest": "/mp3-yd33.php"},
-  {"src": "/api/mp3-yd34.php", "dest": "/mp3-yd34.php"},
-  {"src": "/api/mp3-yd35.php", "dest": "/mp3-yd35.php"},
-  {"src": "/api/photo-126.php", "dest": "/photo-126.php"},
-  {"src": "/api/photo-bing.php", "dest": "/photo-bing.php"},
-  {"src": "/api/photo-bing1.php", "dest": "/photo-bing1.php"},
-  {"src": "/api/photo-gold.php", "dest": "/photo-gold.php"},
-  {"src": "/api/photo-guidao.php", "dest": "/photo-guidao.php"},
-  {"src": "/api/photo-juru.php", "dest": "/photo-juru.php"},
-  {"src": "/api/photo-katong.php", "dest": "/photo-katong.php"},
-  {"src": "/api/photo-loli.php", "dest": "/photo-loli.php"},
-  {"src": "/api/photo-loudian.php", "dest": "/photo-loudian.php"},
-  {"src": "/api/photo-meili.php", "dest": "/photo-meili.php"},
-  {"src": "/api/photo-shima.php", "dest": "/photo-shima.php"},
-  {"src": "/api/photo-wangdong.php", "dest": "/photo-wangdong.php"},
-  {"src": "/api/photo-weimei.php", "dest": "/photo-weimei.php"},
-  {"src": "/api/photo-xinggan.php", "dest": "/photo-xinggan.php"}
+  {"src": "/api/bing.php", "dest": "/api/bing.php"},
+  {"src": "/api/index.php", "dest": "/api/index.php"},
+  {"src": "/api/mp3-126.php", "dest": "/api/mp3-126.php"},
+  {"src": "/api/mp3-az1.php", "dest": "/api/mp3-az1.php"},
+  {"src": "/api/mp3-az2.php", "dest": "/api/mp3-az2.php"},
+  {"src": "/api/mp3-az3.php", "dest": "/api/mp3-az3.php"},
+  {"src": "/api/mp3-az4.php", "dest": "/api/mp3-az4.php"},
+  {"src": "/api/mp3-bg.php", "dest": "/api/mp3-bg.php"},
+  {"src": "/api/mp3-bg2.php", "dest": "/api/mp3-bg2.php"},
+  {"src": "/api/mp3-bg3.php", "dest": "/api/mp3-bg3.php"},
+  {"src": "/api/mp3-dx11.php", "dest": "/api/mp3-dx11.php"},
+  {"src": "/api/mp3-dx12.php", "dest": "/api/mp3-dx12.php"},
+  {"src": "/api/mp3-dx13.php", "dest": "/api/mp3-dx13.php"},
+  {"src": "/api/mp3-dx14.php", "dest": "/api/mp3-dx14.php"},
+  {"src": "/api/mp3-dx21.php", "dest": "/api/mp3-dx21.php"},
+  {"src": "/api/mp3-dx31.php", "dest": "/api/mp3-dx31.php"},
+  {"src": "/api/mp3-dx32.php", "dest": "/api/mp3-dx32.php"},
+  {"src": "/api/mp3-dx33.php", "dest": "/api/mp3-dx33.php"},
+  {"src": "/api/mp3-dx34.php", "dest": "/api/mp3-dx34.php"},
+  {"src": "/api/mp3-dx35.php", "dest": "/api/mp3-dx35.php"},
+  {"src": "/api/mp3-github1.php", "dest": "/api/mp3-github1.php"},
+  {"src": "/api/mp3-github2.php", "dest": "/api/mp3-github2.php"},
+  {"src": "/api/mp3-github3.php", "dest": "/api/mp3-github3.php"},
+  {"src": "/api/mp3-github4.php", "dest": "/api/mp3-github4.php"},
+  {"src": "/api/mp3-jp11.php", "dest": "/api/mp3-jp11.php"},
+  {"src": "/api/mp3-jp12.php", "dest": "/api/mp3-jp12.php"},
+  {"src": "/api/mp3-jp13.php", "dest": "/api/mp3-jp13.php"},
+  {"src": "/api/mp3-jp14.php", "dest": "/api/mp3-jp14.php"},
+  {"src": "/api/mp3-jp21.php", "dest": "/api/mp3-jp21.php"},
+  {"src": "/api/mp3-jp31.php", "dest": "/api/mp3-jp31.php"},
+  {"src": "/api/mp3-jp32.php", "dest": "/api/mp3-jp32.php"},
+  {"src": "/api/mp3-jp33.php", "dest": "/api/mp3-jp33.php"},
+  {"src": "/api/mp3-jp34.php", "dest": "/api/mp3-jp34.php"},
+  {"src": "/api/mp3-jp35.php", "dest": "/api/mp3-jp35.php"},
+  {"src": "/api/mp3-sc11.php", "dest": "/api/mp3-sc11.php"},
+  {"src": "/api/mp3-sc12.php", "dest": "/api/mp3-sc12.php"},
+  {"src": "/api/mp3-sc13.php", "dest": "/api/mp3-sc13.php"},
+  {"src": "/api/mp3-sc14.php", "dest": "/api/mp3-sc14.php"},
+  {"src": "/api/mp3-sc21.php", "dest": "/api/mp3-sc21.php"},
+  {"src": "/api/mp3-sc31.php", "dest": "/api/mp3-sc31.php"},
+  {"src": "/api/mp3-sc32.php", "dest": "/api/mp3-sc32.php"},
+  {"src": "/api/mp3-sc33.php", "dest": "/api/mp3-sc33.php"},
+  {"src": "/api/mp3-sc34.php", "dest": "/api/mp3-sc34.php"},
+  {"src": "/api/mp3-sc35.php", "dest": "/api/mp3-sc35.php"},
+  {"src": "/api/mp3-yd11.php", "dest": "/api/mp3-yd11.php"},
+  {"src": "/api/mp3-yd12.php", "dest": "/api/mp3-yd12.php"},
+  {"src": "/api/mp3-yd13.php", "dest": "/api/mp3-yd13.php"},
+  {"src": "/api/mp3-yd14.php", "dest": "/api/mp3-yd14.php"},
+  {"src": "/api/mp3-yd21.php", "dest": "/api/mp3-yd21.php"},
+  {"src": "/api/mp3-yd31.php", "dest": "/api/mp3-yd31.php"},
+  {"src": "/api/mp3-yd32.php", "dest": "/api/mp3-yd32.php"},
+  {"src": "/api/mp3-yd33.php", "dest": "/api/mp3-yd33.php"},
+  {"src": "/api/mp3-yd34.php", "dest": "/api/mp3-yd34.php"},
+  {"src": "/api/mp3-yd35.php", "dest": "/api/mp3-yd35.php"},
+  {"src": "/api/photo-126.php", "dest": "/api/photo-126.php"},
+  {"src": "/api/photo-bing.php", "dest": "/api/photo-bing.php"},
+  {"src": "/api/photo-bing1.php", "dest": "/api/photo-bing1.php"},
+  {"src": "/api/photo-gold.php", "dest": "/api/photo-gold.php"},
+  {"src": "/api/photo-guidao.php", "dest": "/api/photo-guidao.php"},
+  {"src": "/api/photo-juru.php", "dest": "/api/photo-juru.php"},
+  {"src": "/api/photo-katong.php", "dest": "/api/photo-katong.php"},
+  {"src": "/api/photo-loli.php", "dest": "/api/photo-loli.php"},
+  {"src": "/api/photo-loudian.php", "dest": "/api/photo-loudian.php"},
+  {"src": "/api/photo-meili.php", "dest": "/api/photo-meili.php"},
+  {"src": "/api/photo-shima.php", "dest": "/api/photo-shima.php"},
+  {"src": "/api/photo-wangdong.php", "dest": "/api/photo-wangdong.php"},
+  {"src": "/api/photo-weimei.php", "dest": "/api/photo-weimei.php"},
+  {"src": "/api/photo-xinggan.php", "dest": "/api/photo-xinggan.php"}
   ]
 }
